--- a/planesmith/app/src/main/res/layout/character_add.xml
+++ b/planesmith/app/src/main/res/layout/character_add.xml
@@ -187,7 +187,7 @@
                     android:id="@+id/character_detail"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="280dp"
+                    android:layout_height="wrap_content"
                     android:layout_span="2"
                     android:background="@null"
                     android:ems="10"
