--- a/planesmith/app/src/main/res/layout/world_add.xml
+++ b/planesmith/app/src/main/res/layout/world_add.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="#ccc"
-        android:gravity="left">
+        android:gravity="left"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,7 +55,7 @@
                     android:id="@+id/character_detail"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="643dp"
+                    android:layout_height="wrap_content"
                     android:layout_span="2"
                     android:background="@null"
                     android:ems="10"
