--- a/planesmith/app/src/main/res/layout/story_add.xml
+++ b/planesmith/app/src/main/res/layout/story_add.xml
@@ -45,7 +45,9 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/chapter_name"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"/>
             </TableRow>
             <TableRow
                 android:layout_height="match_parent"
@@ -58,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:background="@null"
-                android:ems="10"
+                android:padding="10dp"
                 android:gravity="start|top"
                 android:hint="@string/chapter_content"
                 android:inputType="textMultiLine"
