--- a/planesmith/app/src/main/res/layout/world_add.xml
+++ b/planesmith/app/src/main/res/layout/world_add.xml
@@ -45,7 +45,9 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/world_name"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"/>
             </TableRow>
             <TableRow
                 android:layout_height="match_parent"
@@ -56,6 +58,7 @@
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
                     android:layout_span="2"
                     android:background="@null"
                     android:ems="10"
