--- a/planesmith/app/src/main/res/layout/character_edit.xml
+++ b/planesmith/app/src/main/res/layout/character_edit.xml
@@ -34,7 +34,8 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="5dp">
 
             <TableRow
                 android:layout_height="match_parent"
