--- a/planesmith/app/src/main/res/layout/characters.xml
+++ b/planesmith/app/src/main/res/layout/characters.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -29,11 +30,39 @@
             android:id="@+id/addnew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:text="+ Add New" />
+            android:backgroundTint="@color/black"
+            android:text="Add New"/>
         </TableRow>
     </TableLayout>
     </RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header"
+        app:layout_constraintTop_toBottomOf="@id/header">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
 
