--- a/planesmith/app/src/main/res/layout/character_add.xml
+++ b/planesmith/app/src/main/res/layout/character_add.xml
@@ -191,6 +191,7 @@
                     android:layout_span="2"
                     android:background="@null"
                     android:ems="10"
+                    android:paddingTop="10dp"
                     android:gravity="start|top"
                     android:hint="@string/character_details"
                     android:inputType="textMultiLine"
