--- a/planesmith/app/src/main/res/layout/characters.xml
+++ b/planesmith/app/src/main/res/layout/characters.xml
@@ -36,6 +36,7 @@
     </TableLayout>
     </RelativeLayout>
 
+    //TODO: Recycler view for SQLite
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,7 +49,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <TableRow
                 android:layout_width="match_parent"
