--- a/planesmith/app/src/main/res/layout/activity_main.xml
+++ b/planesmith/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp">
 
+        //placeholder image
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -46,10 +47,14 @@
             android:id="@+id/encyclopedia"
             android:layout_width="390dp"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="350dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="206dp"
             android:layout_marginBottom="-60dp"
+            android:paddingLeft="10dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/encyclopedia"
             android:textColor="#000"
@@ -61,8 +66,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignBottom="@+id/encyclopedia"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="200dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="340dp"
             android:onClick="onCharacterClicked"
             android:text="@string/characters"
             android:textAlignment="textStart"
@@ -76,8 +85,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignBottom="@+id/characters"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="141dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="280dp"
             android:text="@string/world"
             android:textAlignment="textStart"
             android:textColor="#000"
@@ -89,8 +102,12 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="80dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="220dp"
             android:text="@string/story"
             android:textAlignment="textStart"
             android:textColor="#000"
