--- a/planesmith/app/src/main/res/layout/activity_add_world.xml
+++ b/planesmith/app/src/main/res/layout/activity_add_world.xml
@@ -19,11 +19,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TableRow
+            <LinearLayout
                 android:layout_height="match_parent"
                 android:layout_width="match_parent" >
 
@@ -31,20 +32,21 @@
                     android:id="@+id/world_name"
                     android:layout_width="410dp"
                     android:layout_height="wrap_content"
-                    android:ems="10"
+
                     android:hint="@string/world_name"
                     android:inputType="textPersonName"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"/>
-            </TableRow>
-            <TableRow
+            </LinearLayout>
+            <LinearLayout
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" >
+                android:layout_width="match_parent"
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/world_detail"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_span="2"
                     android:background="@null"
@@ -53,8 +55,8 @@
                     android:hint="@string/world_details"
                     android:inputType="textMultiLine"
                     app:layout_constraintBottom_toBottomOf="parent" />
-            </TableRow>
-        </TableLayout>
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
