--- a/planesmith/app/src/main/res/layout/activity_add_story.xml
+++ b/planesmith/app/src/main/res/layout/activity_add_story.xml
@@ -10,51 +10,57 @@
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="1dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TableRow
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" >
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/chapter_name"
                     android:layout_width="410dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="@string/chapter_name"
-                    android:inputType="textPersonName"
                     android:fontFamily="sans-serif-medium"
-                    android:gravity="center"/>
-            </TableRow>
-            <TableRow
+                    android:gravity="center"
+                    android:hint="@string/chapter_name"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" >
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/chapter_detail"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_span="2"
                     android:background="@null"
-                    android:padding="10dp"
                     android:gravity="start|top"
                     android:hint="@string/chapter_content"
                     android:inputType="textMultiLine"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent" />
-            </TableRow>
-        </TableLayout>
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
