--- a/planesmith/app/src/main/res/layout/activity_add_world.xml
+++ b/planesmith/app/src/main/res/layout/activity_add_world.xml
@@ -30,7 +30,7 @@
 
                 <EditText
                     android:id="@+id/world_name"
-                    android:layout_width="410dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
                     android:hint="@string/world_name"
