--- a/planesmith/app/src/main/res/layout/activity_edit_character.xml
+++ b/planesmith/app/src/main/res/layout/activity_edit_character.xml
@@ -19,13 +19,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TableRow
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" >
+                android:layout_width="match_parent"
+                android:paddingBottom="20px"
+                android:paddingTop="20px">
 
                 <ImageView
                     android:id="@+id/character_portrait"
@@ -33,10 +36,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_span="2"
-                    tools:layout_editor_absoluteX="139dp"
-                    tools:layout_editor_absoluteY="58dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:srcCompat="@tools:sample/avatars" />
-            </TableRow>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -173,8 +178,8 @@
                 <EditText
                     android:id="@+id/character_detail"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_span="2"
                     android:background="@null"
                     android:ems="10"
@@ -185,7 +190,7 @@
                     app:layout_constraintBottom_toBottomOf="parent" />
 
             </TableRow>
-        </TableLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
