--- a/planesmith/app/src/main/res/layout/activity_edit_story.xml
+++ b/planesmith/app/src/main/res/layout/activity_edit_story.xml
@@ -19,24 +19,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TableRow
+            <LinearLayout
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" >
+                android:layout_width="match_parent"
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/chapter_name2"
-                    android:layout_width="410dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/chapter_name"
                     android:inputType="textPersonName"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"/>
-            </TableRow>
+            </LinearLayout>
             <TableRow
                 android:layout_height="match_parent"
                 android:layout_width="match_parent" >
@@ -44,7 +46,7 @@
                 <EditText
                     android:id="@+id/chapter_detail2"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_span="2"
                     android:background="@null"
@@ -54,7 +56,7 @@
                     android:inputType="textMultiLine"
                     app:layout_constraintBottom_toBottomOf="parent" />
             </TableRow>
-        </TableLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
