--- a/planesmith/app/src/main/res/layout/activity_story.xml
+++ b/planesmith/app/src/main/res/layout/activity_story.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Story">
+    tools:context=".StoryActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -39,8 +39,13 @@
             android:layout_marginEnd="1dp">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                android:id="@+id/rv_story"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/addButton"></androidx.recyclerview.widget.RecyclerView>
         </ScrollView>
 
     </LinearLayout>
