--- a/planesmith/app/src/main/res/layout/activity_main.xml
+++ b/planesmith/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="84dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/abu"
             android:padding="15dp"
             android:text="@string/character"
             android:textColor="@color/black"
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/abu"
             android:padding="15dp"
             android:text="@string/world"
             android:textColor="@color/black"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/abu"
             android:padding="15dp"
             android:text="@string/story"
             android:textColor="@color/black"
